# api/models/stripe.go
@@ -1,0 +1,6 @@
+package models
+
+type WebhookResponse struct {
+	Received bool   `json:"received"`
+	Type     string `json:"type"`
+}
